osprey_worker/src/osprey/engine/ast_validator/validators/tests/test_validate_dynamic_calls_have_annotated_rvalue/test_invalid_annotation[List[str, int, float]].txt
error: unexpected additional variants to `List[...]`
--> main.sml:1:15
     |
   1 | Foo: List[str, int, float] = JsonData(path='$.foo')
     |                ^
~~~ also:
--> (1) main.sml:1:20
     |
   1 | Foo: List[str, int, float] = JsonData(path='$.foo')
     |                     ^